add_library(graphqlpp
        graphqlpp/result.h
        graphqlpp/language/tokenization/tokenizer.cpp
        graphqlpp/language/tokenization/tokenize_error.h
        graphqlpp/language/tokenization/location.h
        graphqlpp/language/tokenization/extension.h
        graphqlpp/language/tokenization/token.h)

